--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">پروژه طلا</string>
-    <string name="img_splash">تصویر لگو</string>
-    <string name="gold_price">قیمت طلا و ارز</string>
-    <string name="gold_price_global">
+    <string name="img_logo">تصویر لگو</string>
+    <string name="txt_startup_title">قیمت طلا و ارز</string>
+    <string name="txt_startup_subtitle">
     تازه ترین اخبار طلا و ارز روز جهان
     </string>
 </resources>
