--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="txt_startup_subtitle">
     تازه ترین اخبار طلا و ارز روز جهان
     </string>
+    <string name="txt_date_jalali">
+    سه شنبه ۱۲ فروردین ۱۴۰۲
+    </string>
+    <string name="txt_date_gregorian">
+    26 March 2018
+    </string>
+    <string name="gold_price">قیمت طلا</string>
+    <string name="currency_price">قیمت ارز</string>
 </resources>
